--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "etherpoker",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "socket.io": "^1.3.5"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
